--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="skill-row">
-            <img class="program-img" src="https://cdn-icons.flaticon.com/png/512/1865/premium/1865273.png?token=exp=1643556079~hmac=b072f2fcd7f4ba4e420d775c6652d470" alt="java-code-img">
+            <img class="program-img" src="images/Computer.png" alt="java-code-img">
             <h3>Programming</h3>
             <p>I am very comfortable using Java, however I have touched Python and a few other languages as well.  Currently I am learning HTML, CSS and JavaScript!</p>
           </div>
           <div class="skill-row">
-            <img class="fish-img" src="https://cdn-icons.flaticon.com/png/512/1881/premium/1881825.png?token=exp=1643556051~hmac=8cc63519a16b836b0e7ed81845347564" alt="fish-img">
+            <img class="fish-img" src="images/Fish.png" alt="fish-img">
             <h3>Snorkeling</h3>
             <p>Take me to any body of water and I will probably try to go snorkeling.  I love observing and learning about marine life anywhere I go.</p>
           </div>
